--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username:  jcboxq
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-archives
 
 # Exclude from processing.
 # The following items will not be processed, by default.
